--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "telnet-client": "^1.0.2"
+    "telnet-client": "^1.0.2",
+    "ws": "^7.0.0"
   }
 }
